--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1,maximum-scale=1,minimum-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>CPS</title>
-</head>
+<link href="style.css" rel="stylesheet"></head>
 <body>
     <div class="overlay"></div>
     <div class="modal-call hide-right modal">
@@ -452,5 +452,5 @@
             </div>
         </div>
     </div>
-</body>
+<script type="text/javascript" src="./js/bundle.js"></script></body>
 </html>
