--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                         <button class="section-content__btn section-content__btn--hide"><img src="img/expand.svg" alt="Развернуть текст">Читать далее</button>
                     </div>
                     <img src="img/cps-lg.png" alt="logo photo" class="section-content__picture section-content__picture--size--lg">
- src="img/cps-md.png" alt="logo-photo" class="section-content__picture section-content__picture--size--md">
+                    <img src="img/cps-md.png" alt="logo-photo" class="section-content__picture section-content__picture--size--md">
                     <img src="img/cps.png" alt="logo photo" class="section-content__picture section-content__picture--size--sm">
                 </section> 
                 <section class="brands brands--indent" id="brands">
@@ -173,7 +173,7 @@
                                 <div class="swiper-slide">
                                     <button class="swiper-slide__btn swiper-slide__btn-brands">
                                         <img src="img/hp.svg" alt="hp brand">
-                 src="img/back.svg" alt="arrow icon">
+                                        <img src="img/back.svg" alt="arrow icon">
                                     </button>
                                 </div>
                                 <div class="swiper-slide">
