--- a/src/index.html
+++ b/src/index.html
@@ -138,7 +138,7 @@
                         </div>
                     </div>
                     <div class="inner-wrapper">
-                        <div class="slider slider-brands swiper slider--indent slider-brands--hide">
+                        <div class="slider slider-brands swiper slider--indent">
                             <div class="slider__wrapper swiper-wrapper">
                                 <div class="swiper-slide">
                                     <button class="swiper-slide__btn swiper-slide__btn-brands">
